# start-aws

./: Cargo.toml  LICENSE  README.md  main.scss
.github/workflows/: deploy.yaml
src/: app.rs  main.rs
